include Pickr source code link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-    <a href="/pickr.zip" download>Download Pickr</a>
+    <!-- <a href="/pickr.zip" download>Download Pickr</a> -->
+    <a href="https://github.com/SebastianGuerreroCardenas/Pickr2.0/tree/mainDev">Pickr Github Source Code</a>
 
 </body>
 </html>
