--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 
 <body>
-    <!-- <a href="/pickr.zip" download>Download Pickr</a> -->
+    <h1>Pickr Application Webpage</h1>
+    <h2>Download Pickr Application Here *not implemented yet*</h2>
+    <!-- <a href="/pickr.zip" download>*Download Pickr Application*</a> -->
     <a href="https://github.com/SebastianGuerreroCardenas/Pickr2.0/tree/mainDev">Pickr Github Source Code</a>
 
 </body>
