testing doc file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <body>
     <h1>Pickr Application Webpage</h1>
-    <h2>Download Pickr Application Here *not implemented yet*</h2>
+    <form method="get" action="file.doc">
+	<button type="submit">Download!</button>
+    </form>
     <!-- <a href="/pickr.zip" download>*Download Pickr Application*</a> -->
     <a href="https://github.com/SebastianGuerreroCardenas/Pickr2.0/tree/mainDev">Pickr Github Source Code</a>
 
