update html with pickr.zip

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body>
     <h1>Pickr Application Webpage</h1>
-    <form method="get" action="file.doc">
-	<button type="submit">Download!</button>
+    <form method="get" action="pickr.zip">
+	<button type="submit">Download Pickr</button>
     </form>
     <!-- <a href="/pickr.zip" download>*Download Pickr Application*</a> -->
     <a href="https://github.com/SebastianGuerreroCardenas/Pickr2.0/tree/mainDev">Pickr Github Source Code</a>
