--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Kodiak Picker gh-pages</title>
-</head>
-
-<body>
+  <head>
+    <title>Kodiak Pickr</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </head>
+  <body>
     <h1>Pickr Application Webpage</h1>
     <form method="get" action="pickr.zip">
-	<button type="submit">Download Pickr</button>
+    <button type="submit">Download Pickr</button>
     </form>
-    <!-- <a href="/pickr.zip" download>*Download Pickr Application*</a> -->
     <a href="https://github.com/SebastianGuerreroCardenas/Pickr2.0/tree/mainDev">Pickr Github Source Code</a>
-
-</body>
+  </body>
 </html>
