bootstrap jumbotron added

--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Kodiak Pickr</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="Pickr bi-weekly scheduling tool" content="">
+    <meta name="CMUIS Kodiak Team" content="">
+    <link rel="icon" href="../../favicon.ico">
+
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/jumbotron-narrow.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
+    <title>Kodiak Pickr</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="jumbotron-narrow.css" rel="stylesheet">
+
   </head>
+
   <body>
-    <h1>Pickr Application Webpage</h1>
-    <form method="get" action="pickr.zip">
-    <button type="submit">Download Pickr</button>
-    </form>
-    <a href="https://github.com/SebastianGuerreroCardenas/Pickr2.0/tree/mainDev">Pickr Github Source Code</a>
+
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation"><a href="#">TBD-Documentation?</a></li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">KIBSD Pickr2.0</h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1>Pickr2.0</h1>
+        <p class="lead">Response to Intervention Bi-Weekly Scheduling Tool - conceptualized by Kodiak Island Borough School District - developed by Carnegie Mellon University Information Systems students and Mike Taylor</p>
+        <p><form method="get" action="pickr.zip">
+        <button type="submit">Download Pickr</button></p>
+      </div>
+
+      <footer class="footer">
+        <p>&copy; 2017 CMU IS Kodiak Team</p>
+      </footer>
+
+    </div> <!-- /container -->
+
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
+
