--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="jumbotron">
         <h1>Pickr2.0</h1>
-        <p class="lead">Response to Intervention Bi-Weekly Scheduling Tool - conceptualized by Kodiak Island Borough School District - developed by Mike Taylor and Carnegie Mellon University Information Systems students.</p>
+        <p class="lead">Response to Intervention Bi-Weekly Scheduling Tool - conceptualized by Kodiak Island Borough School District - developed by Mike Taylor and CMU Information Systems students.</p>
         <p><form method="get" action="pickr.zip">
         <button type="submit">Download Pickr</button></p>
       </div>
