--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">TBD-Documentation?</a></li>
+            <li role="presentation"><a href="#">TBD-User Guides?</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">KIBSD Pickr2.0</h3>
