try href file download

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <h1>Pickr2.0</h1>
         <p class="lead">Response to Intervention Bi-Weekly Scheduling Tool - conceptualized by Kodiak Island Borough School District - developed by Mike Taylor and CMU Information Systems students.</p>
         <p><form method="get" action="pickr.zip">
-        <button type="submit">Download Pickr2.0 for Mac</butt n></p>
+        <button type="submit">Download Pickr2.0 for Mac</button n></p>
+        <a href="pickr.zip" download>Download Pickr App</a>
       </div>
 
       <footer class="footer">
