--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
-    <title>Kodiak Pickr</title>
+    <title>Kodiak Pickr2.0</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
