--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p class="lead">Response to Intervention Bi-Weekly Scheduling Tool - conceptualized by Kodiak Island Borough School District - developed by Mike Taylor and CMU Information Systems students.</p>
         <!-- <p><form method="get" action="pickr.zip">
         <button type="submit">Download Pickr2.0 for MacOS</button n></p> -->
-        <a href="pickr.zip" download>Download Pickr App for Mac</a>
+        <a href="pickr.zip" download>Download Pickr App for MacOS</a>
       </div>
 
       <footer class="footer">
