change size icon

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- <p><form method="get" action="pickr.zip">
         <button type="submit">Download Pickr2.0 for MacOS</button n></p> -->
         <a href="pickr2.zip" download>Download Pickr2.0 - MacOS</a><br>
-        <p>**After downloading and unzipping Pickr2.0, move the <img src="img/pickrIcon.png" alt="Pickr2.0 Icon"> to "Applications" folder**</p>
+        <p>**After downloading and unzipping Pickr2.0, move the Pickr2.0 App <img src="img/pickrIcon.png" alt="Pickr2.0 Icon"> to "Applications" folder**</p>
       </div>
 
       <footer class="footer">
