--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <p class="lead">Response to Intervention Bi-Weekly Scheduling Tool - conceptualized by Kodiak Island Borough School District - developed by Mike Taylor and CMU Information Systems students.</p>
         <!-- <p><form method="get" action="pickr.zip">
         <button type="submit">Download Pickr2.0 for MacOS</button n></p> -->
-        <a href="pickr2.zip" download>Download Pickr2.0 - MacOS</a><br>
+        <a href="pickr-v2.zip" download>Download Pickr2.0 - MacOS</a><br>
         <p>**After downloading and unzipping Pickr2.0, move the Pickr2.0 App <img src="img/pickrIcon.png" alt="Pickr2.0 Icon"> to "Applications" folder**</p>
       </div>
 
       <footer class="footer">
-        <p>&copy; 2017 CMU IS Kodiak Team</p>
+        <p>&copy; 2017 KIBSD Department of Technology</p>
       </footer>
 
     </div> <!-- /container -->
